# DFDiagnoser

./: .gitignore  .wakatime-project  MANIFEST.in  README.md  pyproject.toml  spack.yaml
.github/workflows/: ci.yml
dfdiagnoser/: __init__.py  __main__.py  config.py  diagnoser.py  input.py  output.py  scoring.py  state.py  trend.py  types.py
dfdiagnoser/configs/: config.yaml
dfdiagnoser/configs/hydra/help/: dfdiagnoser.yaml
dfdiagnoser/configs/hydra/job_logging/: dfdiagnoser.yaml
dfdiagnoser/configs/rule_defs/dlio/: all.yaml  low_compute_util.yaml
dfdiagnoser/configs/rule_defs/posix/: all.yaml  excessive_metadata_access.yaml  metadata_dominance.yaml  operation_imbalance.yaml  size_imbalance.yaml  small_reads.yaml  small_writes.yaml
dfdiagnoser/streaming/: __init__.py  mofka_io.py  zmq_io.py
tests/: conftest.py  mofka.config.json  test_cli_facts.py  test_diagnose_facts.py  test_diagnoser.py  test_e2e.py  test_e2e_facts_pipeline.py  test_e2e_streaming_mofka.py  test_output.py  test_scoring.py  test_trend.py
tests/data/dfanalyzer_checkpoints/unet3d_v100/: _flat_view_proc_name_1.parquet  _flat_view_time_range_1.parquet  _raw_stats_1.json
tests/data/facts_bundle/: facts.jsonl
tests/streaming/: test_mofka_io.py
